fix overflow and spacing for details and details-wrapper

--- a/sass/content-form-layout.scss
+++ b/sass/content-form-layout.scss
@@ -143,7 +143,6 @@ $action-bar-height: 50px;
     .content-form__advanced {
       width: $advanced-sidebar-fixed-width;
       transform: translate3d(-100%, 0, 0);
-      padding-right: 0;
     }
 
     .toolbar-tray-horizontal {
